edited description on page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="./assets/images/image.jpg" alt="">
                 <h2>Shauna Lachelier</h2>
                 <h3>Web Developer</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius duis at consectetur lorem. Nascetur ridiculus mus mauris vitae. Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Pellentesque habitant morbi tristique senectus. Netus et malesuada fames ac turpis egestas sed tempus.
+                <p>Thank you for viewing my portfolio! I have worked on numerous different projects so far, mostly focusing on front-end development. I am currently attending the UT Coding Bootcamp in Austin, Texas. My goal is to become a fullstack developer. 
                 </p>
                 <br>
                 <a class="link" href="./resume.html">Resume</a>
