fixing image issues

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shauna Lachelier</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
     
@@ -16,7 +14,7 @@
 
     <header>
         <div class="header">
-            <img src="/assets/images/logo.svg" alt="Shauna Lachelier's portfolio logo" class="logo">
+            <img src="./assets/images/logo.svg" alt="Shauna Lachelier's portfolio logo" class="logo">
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only">Menu</span></button>
         <nav>
@@ -53,7 +51,7 @@
     <main>
         <section class="glass">
             <div class="info">
-                <img src="./assets/images/image.jpg" alt="">
+                <img src="./assets/images/image.jpg" alt="A picture of Shauna Lachelier">
                 <h2>Shauna Lachelier</h2>
                 <h3>Web Developer</h3>
                 <p>Thank you for viewing my portfolio! I have worked on numerous different projects so far, mostly focusing on front-end development. I am currently attending the UT Coding Bootcamp in Austin, Texas. My goal is to become a fullstack developer. 
