fixed file errors

--- a/index.html
+++ b/index.html
@@ -107,6 +107,6 @@
     </main>
 
 
-    <script src="/assets/js/script.js" defer></script>
+    <script src="/users/slach/UT_Bootcamp/SLachelier_Portfolio/assets/js/script.js" defer></script>
 </body>
 </html>
