--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shauna Lachelier</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 </li>
                 <li>
                     <a class=" uppercase text-white letter-spacing-2" href="about.html">
-                        <span aria-hidden="true">{</span> About_Me <span aria-hidden="true">}</span>
+                        <span aria-hidden="true">{</span> Resume <span aria-hidden="true">}</span>
                     </a>
                 </li>
                 <li>
@@ -56,8 +56,6 @@
                 <h3>Web Developer</h3>
                 <p>Thank you for viewing my portfolio! I have worked on numerous different projects so far, mostly focusing on front-end development. I am currently attending the UT Coding Bootcamp in Austin, Texas. My goal is to become a fullstack developer. 
                 </p>
-                <br>
-                <a class="link" href="./resume.html">Resume</a>
             </div>
             <div class="cards">            
                 <div class="card">
@@ -106,7 +104,7 @@
         </section>
     </main>
 
-
-    <script src="/users/slach/UT_Bootcamp/SLachelier_Portfolio/assets/js/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="/assets/js/script.js" defer></script>
 </body>
 </html>
