finished hamburger and effects

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" uppercase text-white letter-spacing-2" href="about.html">
+                    <a class=" uppercase text-white letter-spacing-2" href="./pages/resume.html" target="_blank">
                         <span aria-hidden="true">{</span> Resume <span aria-hidden="true">}</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" uppercase text-white letter-spacing-2" href="https://github.com/SLachelier">
+                    <a class=" uppercase text-white letter-spacing-2" href="https://github.com/SLachelier" target="_blank">
                         <span aria-hidden="true">{</span> GitHub <span aria-hidden="true">}</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" uppercase text-white letter-spacing-2" href="https://www.linkedin.com/in/shauna-lachelier-968982b5/">
+                    <a class=" uppercase text-white letter-spacing-2" href="https://www.linkedin.com/in/shauna-lachelier-968982b5/" target="_blank">
                         <span aria-hidden="true">{</span> LinkedIn <span aria-hidden="true">}</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" uppercase text-white letter-spacing-2" href="contact.html">
+                    <a class=" uppercase text-white letter-spacing-2" href="./pages/contact.html" target="_blank">
                         <span aria-hidden="true">{</span> Contact <span aria-hidden="true">}</span>
                     </a>
                 </li>
