removed pfp and added Lightbulb website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" uppercase text-white letter-spacing-2" href="https://www.linkedin.com/in/shauna-lachelier-968982b5/" target="_blank">
+                    <a class=" uppercase text-white letter-spacing-2" href="www.linkedin.com/in/slachelier/" target="_blank">
                         <span aria-hidden="true">{</span> LinkedIn <span aria-hidden="true">}</span>
                     </a>
                 </li>
@@ -51,8 +51,7 @@
     <main>
         <section class="glass">
             <div class="info">
-                <img src="./assets/images/image.jpg" alt="A picture of Shauna Lachelier">
-                <h2>Shauna Lachelier</h2>
+                <h1>Shauna Lachelier</h1>
                 <h3>Web Developer</h3>
                 <p>Thank you for viewing my portfolio! I have worked on numerous different projects so far, mostly focusing on front-end development. I am currently attending the UT Coding Bootcamp in Austin, Texas. My goal is to become a fullstack developer. 
                 </p>
@@ -94,10 +93,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/quiz.png" alt="Quiz website">
+                    <img src="./assets/images/Lightbulb.png" alt="Collaborative Idea Sharing Website">
                     <div class="card-info">
-                        <h2><a class="link" href="https://slachelier.github.io/wk4-challenge-slachelier/" target="_blank">JavaScript Quiz</a></h2>
-                        <p>A timed quiz with a built-in points system</p>
+                        <h2><a class="link" href="https://uta-lightbulb.herokuapp.com/" target="_blank">Lightbulb</a></h2>
+                        <p>A platform for collaborating and sharing ideas for free use.</p>
                     </div>
                 </div>
             </div>
