--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,1 +1,3 @@
-<h1 class="info">A work in progress.</h1>
+<a href="../assets/files/SHAUNA_LACHELIER_Resume.pdf" download>
+    <img src="../assets/images/resumeimg.png" alt="My Resume">
+  </a>
